Enhance GPU support across services with robust error handling and monitoring
- Updated Dockerfile for watchdog service to include nvidia-ml-py for GPU monitoring.
- Implemented CUDA error handling in inference_service.py for CNN-LSTM model, including recovery mechanisms and GPU memory management.
- Added CUDA health checks and error handling in training_service.py to ensure stable training processes.
- Enhanced health_checker.py to support GPU services with extended health checks and error reporting.
- Improved resource_monitor.py to monitor GPU metrics, including memory usage and temperature, and prevent training under constrained resources.

--- a/docker/services/watchdog/Dockerfile
+++ b/docker/services/watchdog/Dockerfile
@@ -19,7 +19,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Install additional dependencies for watchdog
-RUN pip install --no-cache-dir httpx python-telegram-bot psutil
+# nvidia-ml-py (pynvml) for GPU monitoring - will gracefully fallback if no GPU
+RUN pip install --no-cache-dir httpx python-telegram-bot psutil nvidia-ml-py
 
 # Copy only the Watchdog app source code (avoid importing other services)
 # ARCHITEKTUR: Watchdog greift auf Daten NUR über Data Service (Port 3001) zu
